# bbmp_toolbox

./: .gitignore  LICENSE.md  bootstrap-and-test  pre-commit  pyproject.toml  requirements.txt  setup_python.py
scripts/: setup-venv
src/bbmp_toolbox/: __init__.py  terminal_wrap.py
tests/: test_mypy.py  test_terminal_wrap.py
